--- a/templates/info.html
+++ b/templates/info.html
@@ -6,60 +6,94 @@
 {% endcomment %}
 
 {% block head %}
+  <style>
+    .quad_pfe {
+      border: solid black 2px;
+      border-radius: 8px;
+      padding: 16px;
+    }
 
-<style>
-  .quad_pfe {
-    border: solid black 2px;
-    border-radius: 8px;
-    padding: 16px;
-  }
-
-  p {
-    text-align: justify;
-    margin-bottom: 0.8rem;
-  }
-
-
-</style>
+    p {
+      text-align: justify;
+      margin-bottom: 0.8rem;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
 
-<div class="container-fluid" style="max-width:740px; padding-left: 6px; padding-right: 6px;">
-  <div class="row justify-content-around">
-    <div class="col-xl-auto" style="margin-bottom: 18px;">
-      <div class="quad_pfe">
+  <div class="container-fluid" style="max-width:740px; padding-left: 6px; padding-right: 6px;">
+    <div class="row justify-content-around">
+      <div class="col-xl-auto" style="margin-bottom: 18px;">
+        <div class="quad_pfe">
 
-    <h2>Capstone</h2>
-    <br>
-    
-    <p>Os cursos de Engenharia (Computação, Mecatrônica e Mecânica) e Ciência da Computação do Insper valorizam o preparo profissional dos seus estudantes, proporcionando uma sólida formação técnica e um contínuo aprimoramento de suas habilidades em trabalho em equipe, organização, comunicação, design, empreendedorismo, dentre outras competências. Assim, a integração entre o ambiente acadêmico e o mercado de trabalho é uma característica fundamental dos cursos.</p>
-    <p>O Capstone do Insper cumpre esse propósito ao aproximar os estudantes das organizações, permitindo que desenvolvam soluções tecnológicas para demandas reais e genuinamente relevantes. Esse processo oferece uma experiência prática em situações típicas do mercado, possibilitando que os estudantes apliquem conhecimentos e habilidades desenvolvidos ao longo dos cursos. Para as organizações, o Capstone é uma oportunidade de avaliar a viabilidade de novas tecnologias por meio de protótipos, repensar e melhorar o design de produtos ou resolver problemas técnicos que possam estar enfrentando.</p>
-    <p>Os cursos do Insper são em período integral (manhã e tarde), e o Capstone ocorre no penúltimo ano, imediatamente antes do estágio, com duração de um semestre letivo e um total de 360 horas de trabalho com uma organização parceira. Durante o Capstone, os estudantes também cursam uma ou duas disciplinas eletivas em paralelo.</p>
-    <p>Os projetos das diferentes organizações são apresentados aos estudantes, que aplicam para os projetos de acordo com seu interesse. A partir dessas candidaturas, formam-se grupos, idealmente com quatro membros. Cada grupo contará com um orientador acadêmico, um professor do Insper com experiência técnica e profissional para guiá-los ao longo do projeto. Além disso, são realizadas atividades paralelas para preparar melhor os estudantes na interação com as organizações.</p>
-    <p>As organizações que propõem os projetos devem se dispor a acompanhar todo o processo de desenvolvimento ao longo do semestre letivo. Isso inclui a designação de um mentor técnico, que idealmente deve realizar encontros semanais com o grupo. Nesse processo também se pede uma imersão dos estudantes no funcionamento da organização.</p>
-    
-    <br>
-    <p>Você consegue mais detalhes sobre o Capstone em:<br>
-    <a href="https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone" target="_blank">https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone</a></p>
-    
-    <br>
-    <p>Submissões de projetos em:<br>
-      <a href="https://pfe.insper.edu.br/organizacoes/proposta_submissao" target="_blank">https://pfe.insper.edu.br/organizacoes/proposta_submissao</a></p>
-    <br>
+          <h2>Capstone</h2>
+          <br>
+          
+          <span lang="pt">
 
-    <p>Para o calendário dos próximos projetos, por favor consulte a equipe do Capstone.</p>
+            <p>Os cursos de Engenharia (Computação, Mecatrônica e Mecânica) e Ciência da Computação do Insper valorizam o preparo profissional dos seus estudantes, proporcionando uma sólida formação técnica e um contínuo aprimoramento de suas habilidades em trabalho em equipe, organização, comunicação, design, empreendedorismo, dentre outras competências. Assim, a integração entre o ambiente acadêmico e o mercado de trabalho é uma característica fundamental dos cursos.</p>
+            <p>O Capstone do Insper cumpre esse propósito ao aproximar os estudantes das organizações, permitindo que desenvolvam soluções tecnológicas para demandas reais e genuinamente relevantes. Esse processo oferece uma experiência prática em situações típicas do mercado, possibilitando que os estudantes apliquem conhecimentos e habilidades desenvolvidos ao longo dos cursos. Para as organizações, o Capstone é uma oportunidade de avaliar a viabilidade de novas tecnologias por meio de protótipos, repensar e melhorar o design de produtos ou resolver problemas técnicos que possam estar enfrentando.</p>
+            <p>Os cursos do Insper são em período integral (manhã e tarde), e o Capstone ocorre no penúltimo ano, imediatamente antes do estágio, com duração de um semestre letivo e um total de 360 horas de trabalho com uma organização parceira. Durante o Capstone, os estudantes também cursam uma ou duas disciplinas eletivas em paralelo.</p>
+            <p>Os projetos das diferentes organizações são apresentados aos estudantes, que aplicam para os projetos de acordo com seu interesse. A partir dessas candidaturas, formam-se grupos, idealmente com quatro membros. Cada grupo contará com um orientador acadêmico, um professor do Insper com experiência técnica e profissional para guiá-los ao longo do projeto. Além disso, são realizadas atividades paralelas para preparar melhor os estudantes na interação com as organizações.</p>
+            <p>As organizações que propõem os projetos devem se dispor a acompanhar todo o processo de desenvolvimento ao longo do semestre letivo. Isso inclui a designação de um mentor técnico, que idealmente deve realizar encontros semanais com o grupo. Nesse processo também se pede uma imersão dos estudantes no funcionamento da organização.</p>
+            <br>
 
-    <br>
-      <div class="contact-info">
-        <p><strong>Contato:</strong></p>
-        <p>e-mail: <a href="mailto:coordenacaocapstone@insper.edu.br">coordenacaocapstone@insper.edu.br</a></p>
-        {% comment %} <p>telefone: 11-4504-2719</p> {% endcomment %}
+            <p>Você consegue mais detalhes sobre o Capstone em:<br>
+              <a href="https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone" target="_blank">https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone</a>
+            </p>
+            <br>
+
+            <p>Submissões de projetos em:<br>
+              <a href="https://pfe.insper.edu.br/organizacoes/proposta_submissao" target="_blank">https://pfe.insper.edu.br/organizacoes/proposta_submissao</a>
+            </p>
+            <br>
+
+            <p>Para o calendário dos próximos projetos, por favor consulte a equipe do Capstone.</p>
+            <br>
+
+            <div class="contact-info">
+              <p><strong>Contato:</strong></p>
+              <p>e-mail: <a href="mailto:coordenacaocapstone@insper.edu.br">coordenacaocapstone@insper.edu.br</a></p>
+              {% comment %} <p>telefone: 11-4504-2719</p> {% endcomment %}
+            </div>
+
+          </span>
+
+          <span lang="en" style="display:none">
+
+            <p>Insper's Engineering (Computer, Mechatronics, and Mechanical) and Computer Science programs emphasize the professional preparation of their students, providing a solid technical foundation and continuous improvement of their skills in teamwork, organization, communication, design, entrepreneurship, and other competencies. Thus, the integration between the academic environment and the job market is a fundamental characteristic of the programs.</p>
+            <p>Insper's Capstone fulfills this purpose by bringing students closer to organizations, allowing them to develop technological solutions for real and genuinely relevant demands. This process offers practical experience in typical market situations, enabling students to apply the knowledge and skills they have developed throughout the programs. For organizations, the Capstone is an opportunity to assess the feasibility of new technologies through prototypes, rethink and improve product design, or solve technical problems they may be facing.</p>
+            <p>Insper's programs are full-time (morning and afternoon), and the Capstone takes place in the penultimate year, immediately before the internship. It lasts one academic semester, totaling 360 hours of work with a partner organization. During the Capstone, students also take one or two elective courses in parallel.</p>
+            <p>The projects from various organizations are presented to the students, who apply to the projects according to their interests. Based on these applications, groups are formed, ideally with four members. Each group will have an academic advisor, an Insper professor with technical and professional experience to guide them throughout the project. In addition, parallel activities are conducted to better prepare students for interacting with organizations.</p>
+            <p>Organizations proposing projects must be willing to follow the entire development process throughout the academic semester. This includes appointing a technical mentor, who should ideally meet weekly with the group. Additionally, the process requires students to immerse themselves in the organization's operations.</p>
+            <br>
+            
+            <p>You can find more details about the Capstone at:<br>
+              <a href="https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone" target="_blank">https://hub.insper.edu.br/projetos-inovadores/projetos-academicos-de-inovacao/capstone</a>
+            </p>
+            <br>
+
+            <p>Project submissions at:<br>
+              <a href="https://pfe.insper.edu.br/organizacoes/proposta_submissao" target="_blank">https://pfe.insper.edu.br/organizacoes/proposta_submissao</a>
+            </p>
+            <br>
+
+            <p>For the calendar of upcoming projects, please consult the Capstone team.</p>
+            <br>
+
+            <div class="contact-info">
+              <p><strong>Contact:</strong></p>
+              <p>e-mail: <a href="mailto:coordenacaocapstone@insper.edu.br">coordenacaocapstone@insper.edu.br</a></p>
+              {% comment %} <p>telefone: 11-4504-2719</p> {% endcomment %}
+            </div>
+            
+          </span>
+        </div>
       </div>
-
+    </div>
   </div>
-</div>
-</div>
-</div>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
